Fixes in 1.0.3: 
- The -R/remove option to remove files is no longer more destructive
  than intended.
- Files with 'unsafe' characters in their filename is now saved as
  "foo bar" instead of "foo%20bar" 
- The -B switch works once again. 

Fixes in 1.0.2: 
- W3mir now only newline converts HTML files, all other files are handled
  as binary. This should ensure file-integrety even when working with
   mis-configured servers. 

Fixes in 1.0.1: 
-fa option and corresponding configuration file directive works again. 
- Added -nnc option and a corresponding configuration file directive. It
  disables newline conversions, which could corrupt files the Webserver
  mis-declares. The HOWTO explains the uses of -nnc 