@@ -14,7 +14,7 @@ Options: recurse
 # This directive was previously named 'Fetch-options'
 #
 # Start here:
-URL: http://www.ifi.uio.no/~janl/
+URL: http://www.stud.ifi.uio.no/~janl/
 #
 #
 # How much noise to make, one of quiet, brief or chatty.  Default is brief
