@@ -13,7 +13,7 @@ URL: http://www.math.uio.no/~janl/ math/janl
 # should be gotten too.  Into the named directories.  Two arguments are
 # required for 'Also:'.
 Also: http://www.math.uio.no/drift/personer/ math/drift
-Also: http://www.ifi.uio.no/~janl/ ifi/janl
+Also: http://www.stud.ifi.uio.no/~janl/ ifi/janl
 Also: http://www.mi.uib.no/~nicolai/ math-uib/nicolai
 #
 # A more typical use would perhaps be:
@@ -40,6 +40,6 @@ Fixup: run
 #
 # w3mir/math/janl		files from http://www.math.uio.no/~janl
 # w3mir/math/drift		from http://www.math.uio.no/drift/personer/
-# w3mir/ifi/janl		from http://www.ifi.uio.no/~janl/
+# w3mir/ifi/janl		from http://www.stud.ifi.uio.no/~janl/
 # w3mir/math-uib/nicolai	from http://www.mi.uib.no/~nicolai/
 #
